[tool.poetry]
name = "wordlesolver"
version = "0.1.0"
description = ""
authors = ["Ben Nathanson <24640705+ben-nathanson@users.noreply.github.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
black = "^23.1.0"
pytest = "^7.2.1"
pre-commit = "^3.1.0"
numpy = "^1.24.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
